app/frontend/components/doc_sidebar/styles.css
/* -- Sidebar Native expander -- */
[data-testid="stExpandSidebarButton"]::after {
    content: "Mis documentos";
}
[data-testid="stSidebar"] {
    background-color: #252524;
    border-right: solid 1px #494946;
    height: 100%;
}
.uploader-container {
    padding: 1rem;
}
[data-testid="stSidebar"] [data-testid="stFileUploaderDropzone"] {
    border-radius: 20px !important;
    background-color: #1f1f1e !important;
}
.st-key-uploader {
    padding: 1rem;
}
/* ── Document list ── */
.document-container {
    display: flex;
    flex-direction: column;
    position: relative;
    gap: 20px;
    padding: 1rem;
    box-sizing: border-box;
    width: 100%;
    overflow-x: hidden;
}
.document-card {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 10px;
    padding: 15px;
    position: relative;
    width: 100%;
    max-width: 100%;
    box-sizing: border-box;
    height: 60px;
    background-color: #1f1f1e;
    border-radius: 10px;
    overflow: hidden;
    border: 1px solid #7a7a7a;
}
[data-testid="stSidebar"] h2 {
    padding-left: 1rem;
    opacity: 0.8;
}
[data-testid="stSidebar"] h3 {
    padding-left: 1rem;
    opacity: 0.8;
}
[data-testid="stSidebar"] p {
    padding-left: 1rem;
    opacity: 0.8;
}
.document-card p {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    margin: 0;
    flex: 1;
    min-width: 0;
    opacity: 0.6;
}
.document-img {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-shrink: 0;
    width: 24px;
    height: 24px;
}
.document-img svg {
    width: 100%;
    height: 100%;
}

